apps/pocket-id/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manafishrov-pocket-id
  labels:
    gateway-access: public
    pod-security.kubernetes.io/enforce: baseline
