apps/pocket-id/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocket-id
  namespace: manafishrov-pocket-id
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pocket-id
  serviceName: pocket-id-internal
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v2.13.0@sha256:c9c1d7b70006968d673a1073df048a3fdec73ccb54e182320b56bb911340f6f1
          ports:
            - containerPort: 1411
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 18
          volumeMounts:
            - mountPath: /app/data
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: nvme-ha
