apps/pocket-id/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id-internal
  namespace: manafishrov-pocket-id
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: pocket-id
  ports:
    - name: http
      port: 1411
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: manafishrov-pocket-id
spec:
  selector:
    app: pocket-id
  ports:
    - name: http
      port: 80
      targetPort: http
