apps/pocket-id/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pocket-id
  namespace: manafishrov-pocket-id
spec:
  endpointSelector:
    matchLabels:
      app: pocket-id
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: flux-system
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:app: vaultwarden
            k8s:io.kubernetes.pod.namespace: manafishrov-vaultwarden
        - matchLabels:
            k8s:app: nextcloud
            k8s:io.kubernetes.pod.namespace: manafishrov-nextcloud
      toPorts:
        - ports:
            - port: "1411"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: manafishrov-stalwart
            k8s:app: stalwart
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: smtp.resend.com
      toPorts:
        - ports:
            - port: "465"
              protocol: TCP
